--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,6 @@
 Django==5.2.10
-gunicorn==25.0.1
-whitenoise==6.7.0
-
-django-tailwind==3.8.0
+gunicorn==21.2.0
+whitenoise==6.6.0
 django-browser-reload==1.15.0
-
-pillow==10.3.0
-requests==2.32.5
-python-dateutil==2.9.0.post0
-pytz==2025.2
-
-numpy==1.26.4
-pandas==2.2.2
-scikit-learn==1.4.2
-nltk==3.9.2
-
-gTTS==2.5.4
-googletrans==4.0.0rc1
+django-tailwind==3.8.0
+python-dotenv==1.0.1
